# lightyear-template

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  flake.nix  lightyear-template.org
.github/workflows/: ci.yaml  release.yaml
crates/assets/: Cargo.toml
crates/assets/assets/scenes/: example_character.glb
crates/assets/src/: assets.rs  lib.rs
crates/client/: Cargo.toml
crates/client/src/: app.rs  game_state.rs  host.rs  input.rs  lib.rs  network.rs  replication.rs
crates/client/src/ui/: main_menu.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: level.rs  lib.rs  player.rs
crates/launcher/: Cargo.toml  Trunk.toml
crates/launcher/options/: client_options.ron  server_options.ron  web_client_options.ron
crates/launcher/src/: launch_options.rs  main.rs  native.rs
crates/launcher/web/: index.html  style.css
crates/launcher/web/certs/: README.md
crates/mygame-assets/: Cargo.toml
crates/mygame-assets/assets/scenes/: example_character.glb  example_environment.glb
crates/mygame-assets/src/: assets.rs  level_assets.rs  lib.rs
crates/mygame-client/: Cargo.toml
crates/mygame-client/src/: app.rs  game_state.rs  host.rs  input.rs  interpolation.rs  lib.rs  network.rs  replication.rs  ui.rs
crates/mygame-client/src/ui/: main_menu.rs  mod.rs  system_menu.rs
crates/mygame-common/: Cargo.toml
crates/mygame-common/src/: level.rs  lib.rs  player.rs
crates/mygame-launcher/: Cargo.toml  README.md  Trunk.toml
crates/mygame-launcher/options/: client_options.ron  server_options.ron  web_client_options.ron
crates/mygame-launcher/src/: launch_options.rs  load_certs.rs  main.rs  native.rs  wasm.rs
crates/mygame-launcher/web/: index.html
crates/mygame-launcher/web/certs/: README.md
crates/mygame-protocol/src/: component.rs  input.rs  lib.rs  message.rs
crates/mygame-render/: Cargo.toml
crates/mygame-render/src/: camera.rs  lib.rs
crates/mygame-server/: Cargo.toml
crates/mygame-server/src/: app.rs  lib.rs  network.rs  replication.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: input.rs  message.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  lib.rs  network.rs  replication.rs
deployment/client/options/: client_options.ron
deployment/server/options/: server_options.ron  shared_options.ron
