[workspace]
members = [
  "crates/mygame-client",
  "crates/mygame-server",
  "crates/mygame-common",
  "crates/mygame-protocol",
  "crates/mygame-launcher",
  "crates/mygame-render",
  "crates/mygame-assets"
]
resolver = "2"

[patch.crates-io]
leafwing-input-manager = {git = "https://github.com/Leafwing-Studios/leafwing-input-manager", branch = "main"}

[workspace.dependencies]
bevy = {version = "0.15", features = [
  "serialize",
  "bevy_pbr",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "default_font",
  "tonemapping_luts",
  "animation",
  "bevy_animation",
  "bevy_gltf",
  "png",
  "bevy_window",
  "bevy_winit",
  "webgpu", # TODO: Disable this when not on WASM
], default-features = false}

bevy-inspector-egui = "0.29"

bincode = "1.3.3"
serde = "1.0.217"
crossbeam-channel = "0.5.14"
getrandom = {version = "0.2", features = ["wasm_js"]}

lightyear = {git = "https://github.com/cBournhonesque/lightyear", branch = "main", features = [
  "leafwing",
  "avian3d",
  "websocket",
  "webtransport"
]}

avian3d = {version = "0.2.0", features = [
  "3d",
  "f32",
  "parry-f32",
  "parallel",
  "serialize",
]}

leafwing-input-manager = {git = "https://github.com/Leafwing-Studios/leafwing-input-manager", branch = "main", default-features = false, features = [
  "keyboard",
  "gamepad",
  "mouse",
]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[workspace.lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
