[workspace]
members = [
  "crates/client",
  "crates/server",
  "crates/common",
  "crates/protocol",
  "crates/launcher",
  "crates/render",
  "crates/assets"
]
resolver = "2"

[patch.crates-io]
leafwing-input-manager = {git = "https://github.com/Leafwing-Studios/leafwing-input-manager", branch = "main"}

[workspace.dependencies]
bevy = {version = "0.15", features = [
  "serialize",
  "bevy_pbr",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "default_font",
  "tonemapping_luts",
  "animation",
  "bevy_animation",
  "bevy_gltf",
  "png",
  "bevy_window",
  "bevy_winit",
  "x11",
], default-features = false}

bevy-inspector-egui = "0.29"

bincode = "1.3.3"
serde = "1.0.217"
crossbeam-channel = "0.5.14"
getrandom = {version = "0.2"} 

lightyear = {git = "https://github.com/cBournhonesque/lightyear", branch = "main", features = [
  "leafwing",
  "avian3d",
]}

avian3d = {version = "0.2.0", features = [
  "3d",
  "f32",
  "parry-f32",
  "parallel",
  "serialize",
]}

leafwing-input-manager = {git = "https://github.com/Leafwing-Studios/leafwing-input-manager", branch = "main", default-features = false, features = [
  "keyboard",
  "mouse",
]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[workspace.lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[workspace.lints.clippy]
type_complexity = "allow"
