[package]
name = "mygame-client"
version = "0.1.0"
edition = "2024"

[dependencies]
mygame-common = { path = "../mygame-common" }
mygame-render = { path = "../mygame-render" }
mygame-protocol = { path = "../mygame-protocol" }
mygame-assets = { path = "../mygame-assets" }
mygame-server = { path = "../mygame-server", optional = true }
lightyear.workspace = true
leafwing-input-manager.workspace = true
avian3d.workspace = true
serde.workspace = true
bevy.workspace = true
crossbeam-channel.workspace = true

[lints]
workspace = true


[features]
host = ["dep:mygame-server"]
