[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
render = { path = "../render" }
protocol = { path = "../protocol" }
assets = { path = "../assets" }
server = { path = "../server", optional = true }
lightyear.workspace = true
leafwing-input-manager.workspace = true
avian3d.workspace = true
serde.workspace = true
bevy.workspace = true
crossbeam-channel.workspace = true

[lints]
workspace = true
