[package]
name = "mygame-common"
version = "0.1.0"
edition = "2024"

[dependencies]
mygame-protocol = { path = "../mygame-protocol" }
mygame-assets = { path = "../mygame-assets" }
lightyear.workspace = true
leafwing-input-manager.workspace = true
avian3d.workspace = true
serde.workspace = true
bevy.workspace = true
bevy-inspector-egui.workspace = true

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
lightyear = { workspace = true, features = ["webtransport"] }

[lints]
workspace = true
