[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }
assets = { path = "../assets" }
lightyear.workspace = true
leafwing-input-manager.workspace = true
avian3d.workspace = true
serde.workspace = true
bevy.workspace = true
bevy-inspector-egui.workspace = true

[lints]
workspace = true
