[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
server = { path = "../server" }
client = { path = "../client" }
lightyear.workspace = true
bevy.workspace = true
serde.workspace = true
crossbeam-channel.workspace = true
ron = "0.8"
tokio = { version = "1", features = ["rt", "fs"] } # need async to load certs
clap = { version = "4.5", features = ["derive"]}

[lints]
workspace = true

[[bin]]
name = "launcher"
path = "src/main.rs"
