[package]
name = "mygame-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
mygame-common = { path = "../mygame-common" }
mygame-server = { path = "../mygame-server" }
mygame-client = { path = "../mygame-client" }
lightyear.workspace = true
bevy.workspace = true
clap = { version = "4.5", features = ["derive"]}

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
lightyear = { workspace = true, features = ["webtransport"] }

[features]
headless = []

[lints]
workspace = true
