[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
protocol = { path = "../protocol" }
render = { path = "../render" }
assets = { path = "../assets" }
lightyear.workspace = true
leafwing-input-manager.workspace = true
avian3d.workspace = true
serde.workspace = true
bevy.workspace = true

[lints]
workspace = true
